# SystemProgrammingProject

./: CMakeLists.txt  ClientNode.cpp  DigitalIONode.cpp  GyroSensorNode.cpp  README.MD  ServerNode.cpp
include/: DigSensorLib.h  GyroLib.h  KeypadLib.h  RelayLib.h  SocketConLib.h
src/: DigSensorLib.cpp  GyroLib.cpp  KeypadLib.cpp  RelayLib.cpp  SocketConLib.cpp
